--- a/HTML/src/main/resources/pagina2.html
+++ b/HTML/src/main/resources/pagina2.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+          <meta charset="UTF-8">
+          <title>Pagina 2</title>
+    </head>
 
-</body>
+    <body>
+      <h1>Pagina 2 HTML</h1>
+      <a href="./index.html">Regresar al inicio</a>
+    </body>
 </html>
