--- a/HTML/src/main/resources/index.html
+++ b/HTML/src/main/resources/index.html
@@ -3,10 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <title>Hola Mundo!</title>
+        <!-- 2. CSS Interno -->
+<!--        <style>-->
+<!--            body{-->
+<!--                background-color: black;-->
+<!--                color: white;-->
+<!--            }-->
+<!--            a{-->
+<!--             color: hotpink;-->
+<!--            }-->
+<!--        </style>-->
+
+        <!-- 3. CSS Archivo Externo-->
+        <link rel="stylesheet" href="./estilos.css"/>
     </head>
 
     <body>
-        <p>Hola Mundo!</p>
+        <!-- 1. CSS - Inline -->
+<!--        <p style="color: red">Hola Mundo!</p>-->
+        <p class="texto-centrado titulo">Hola Mundo!</p>
+        <p class="texto-centrado">Segundo Párrafo</p>
         <a href="./pagina2.html">Ir a página 2</a>
     </body>
 </html>
