--- a/HTML/src/main/resources/pagina2.html
+++ b/HTML/src/main/resources/pagina2.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-          <meta charset="UTF-8">
-          <title>Pagina 2</title>
+        <meta charset="UTF-8">
+        <title>Pagina 2</title>
+        <!-- 2. CSS Interno -->
+<!--        <style>-->
+<!--            body{-->
+<!--                background-color: black;-->
+<!--                color: white;-->
+<!--            }-->
+<!--            a{-->
+<!--             color: hotpink;-->
+<!--            }-->
+<!--        </style>-->
+        <link rel="stylesheet" href="./estilos.css"/>
     </head>
 
     <body>
-      <h1>Pagina 2 HTML</h1>
+      <h1 class="texto-centrado">Pagina 2 HTML</h1>
       <a href="./index.html">Regresar al inicio</a>
     </body>
 </html>
