--- a/ZonaFitSpring/src/main/resources/META-INF/resources/index.xhtml
+++ b/ZonaFitSpring/src/main/resources/META-INF/resources/index.xhtml
@@ -1,17 +1,59 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-<h:head>
-    <title>ZonaFit Gym</title>
-    <h:outputStylesheet name="https://unpkg.com/primeflex@latest/primeflex.css"/>
-</h:head>
-<h:body>
-    <h:form>
-        <p:panel header="Bienvenido a ZonaFit Gym">
-            <p:outputLabel value="Esta es la página de inicio de nuestra aplicación."/>
-        </p:panel>
-    </h:form>
-</h:body>
-</html>
+<h:html xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:p="http://primefaces.org/ui">
+    <h:head>
+        <title>Zona Fit (GYM)</title>
+        <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css"/>
+        <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/themes/primeone-dark.css"/>
+    </h:head>
+    <h:body>
+        <div class="card">
+            <h:form id="forma-clientes">
+                <p:growl id="mensajes" showDetails="true"/>
+                <!-- MenuBar -->
+                <div class="card">
+                    <p:menubar>
+                        <p:menuitem value="Inicio" icon="pi pi-fw pi-user"
+                                    update=":forma-clientes:clientes-tabla"
+                                    actionListener="#{indexControlador.cargarDatos}"/>
+                    </p:menubar>
+                </div>
+
+            <!-- DataTable -->
+                <div class="card">
+                    <p:dataTable value="#{indexControlador.clientes}" var="cliente" id="clientes-tabla" widgetVar="clientesTabla">
+                        <f:facet name="header">
+                            <div class="flex justify-content-center flex-wrap card-container yellow-container">
+                                <div class="flex align-items-center justify-content-center
+                            w-20rem h-4rem bg-yellow-500 font-bold
+                            text-gray-900 border-round m-2">
+                                    <h3>Zona Fit (GYM)</h3>
+                                </div>
+                            </div>
+                        </f:facet>
+
+                        <p:column headerText="Id">
+                            <h:outputText value="#{cliente.id}"/>
+                        </p:column>
+
+                        <p:column headerText="Nombre">
+                            <h:outputText value="#{cliente.nombre}"/>
+                        </p:column>
+
+                        <p:column headerText="Apellido">
+                            <h:outputText value="#{cliente.apellido}"/>
+                        </p:column>
+
+                        <p:column headerText="Membresía">
+                            <h:outputText value="#{cliente.membresia}"/>
+                        </p:column>
+                    </p:dataTable>
+                </div>
+            </h:form>
+
+
+        </div>
+    </h:body>
+
+</h:html>
