--- a/ZonaFitSpring/src/main/resources/META-INF/resources/index.xhtml
+++ b/ZonaFitSpring/src/main/resources/META-INF/resources/index.xhtml
@@ -52,6 +52,20 @@
                         <p:column headerText="Membresía">
                             <h:outputText value="#{cliente.membresia}"/>
                         </p:column>
+
+                        <p:column>
+                            <p:commandButton value="Editar" icon="pi pi-pencil"
+                                  update=":forma-modal:cliente-ventana"
+                                  process="@this"
+                                  oncomplete="PF('ventanaModalCliente').show()"
+                                  class="ui-button-primary"
+                                  style="margin-right: .5rem">
+                                <f:setPropertyActionListener
+                                    value="#{cliente}"
+                                    target="#{indexControlador.clienteSeleccionado}"/>
+                                <p:resetInput target=":forma-modal:cliente-ventana"/>
+                            </p:commandButton>
+                        </p:column>
                     </p:dataTable>
                 </div>
             </h:form>
