UPDATE ZonaFitSpring/.../resources/META-INF/index.xhtml & /controlador/IndexControlador.java
now we can delete clients via web, finished CRUD

--- a/ZonaFitSpring/src/main/resources/META-INF/resources/index.xhtml
+++ b/ZonaFitSpring/src/main/resources/META-INF/resources/index.xhtml
@@ -65,6 +65,14 @@
                                     target="#{indexControlador.clienteSeleccionado}"/>
                                 <p:resetInput target=":forma-modal:cliente-ventana"/>
                             </p:commandButton>
+                            <p:commandButton value="Eliminar" class="ui-button-danger"
+                                             icon="pi pi-trash"
+                                             process="@this"
+                                             oncomplete="PF('eliminarClienteVentana').show()">
+                                <f:setPropertyActionListener
+                                        value="#{cliente}"
+                                        target="#{indexControlador.clienteSeleccionado}"/>
+                            </p:commandButton>
                         </p:column>
                     </p:dataTable>
                 </div>
@@ -102,6 +110,18 @@
                                          class="ui-button-secondary" type="button"/>
                     </f:facet>
                 </p:dialog>
+                <p:confirmDialog widgetVar="eliminarClienteVentana"
+                                 showEffect="fade" width="300"
+                                 message="¿Eliminar el cliente?"
+                                 header="Confirmación" severtity="warn">
+                    <p:commandButton value="Sí" icon="pi pi-check"
+                                     process="@this"
+                                     actionListener="#{indexControlador.eliminarCliente}"
+                                     oncomplete="PF('eliminarClienteVentana').hide()"/>
+                    <p:commandButton value="No" type="button"
+                                     styleClass="ui-button-secondary"
+                                     icon="pi pi-times" onclick="PF('eliminarClienteVentana').hide()"/>
+                </p:confirmDialog>
             </h:form>
         </div>
     </h:body>
